compiler/testData/diagnostics/tests/multiplatform/topLevelFun/implWithoutHeader.fir.kt
// MODULE: m1-jvm
// FILE: jvm.kt

<!ACTUAL_WITHOUT_EXPECT!>actual fun foo() { }<!>
